# belief-ledger-pramana

./: .gitignore  CHANGELOG.md  CLAUDE.md  HERMES_COMPATIBILITY.md  IMPLEMENTATION_STATE.md  README.md  RELEASE_NOTES.md  __init__.py  after-install.md  belief-ledger-pramana-hermes-plugin-plan.md  belief-ledger-pramana-spec-v0.1.md  config.example.yaml  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
belief_ledger_pramana/: __init__.py  admission.py  atomic.py  compatibility.py  config.py  contracts.py  core_config.py  core_runtime.py  dependencies.py  errors.py  events.py  ids.py  integrity.py  migrations.py  models.py  plugin.py  policy_cli.py  ports.py  projections.py  runtime.py  store.py
belief_ledger_pramana/application/: __init__.py  actions.py  context.py  lifecycle.py  queries.py  verification.py
belief_ledger_pramana/context/: __init__.py  budget.py  inject.py  render.py  select.py
belief_ledger_pramana/data/: __init__.py  action-policies.yaml  defaults.yaml  source-profiles.yaml
belief_ledger_pramana/data/migrations/: 0001_initial.sql  0002_llm_reservations.sql  0003_performance_indexes.sql  0006_enforcement.sql
belief_ledger_pramana/engine/: __init__.py  contradiction.py  defeat.py  graph.py  priority.py  qualifiers.py  retractions.py  trust.py  validity.py
belief_ledger_pramana/gate/: __init__.py  classify.py  decision.py  preconditions.py
belief_ledger_pramana/hermes/: __init__.py  cli.py  hooks.py  middleware.py  model_port.py  schemas.py  slash_commands.py  tools.py
belief_ledger_pramana/infrastructure/: __init__.py  sqlite_ledger.py
belief_ledger_pramana/ingestion/: __init__.py  absence.py  adapters.py  claims.py  provenance.py  tool.py  user.py
belief_ledger_pramana/lint/: __init__.py  enforce.py  extract.py  match.py  report.py
belief_ledger_pramana/llm/: __init__.py  client.py  prompts.py  schemas.py
belief_ledger_pramana/verification/: __init__.py  apta.py  chain_audit.py  methods.py  scheduler.py
docs/: adapter-authoring.md  adapter-conformance.md  architecture.md  baseline-v1rc1.md  belief-ledger-pramana-spec-v0.1.md  configuration.md  event-compatibility.md  event-format.md  operations.md  requirements-traceability.md  threat-model.md  upgrade-and-rollback.md
docs/adr/: 0001-hermes-integration-surface.md  0002-event-sourced-sqlite.md  0003-plugin-only-enforcement-limits.md  0004-product-positioning.md  0005-host-neutral-core.md  0006-enforcement-capabilities.md
evaluations/: __init__.py  ablations.py  config.yaml  report.py
evaluations/suite_a_grounding/: cases.jsonl
evaluations/suite_b_badha/: cases.jsonl
evaluations/suite_c_agent_failures/: cases.jsonl
evaluations/suite_d_linter/: cases.jsonl
evaluations/suite_e_action_gate/: cases.jsonl
examples/deployment_gate/: README.md  expected-result-v1.json  run.py  scenario-v1.json  validate_fixtures.py
scripts/: build_workspace.py  check_dependency_boundaries.py  check_hermes_contract.py  check_product_claims.py  generate_release_evidence.py  inspect_artifacts.py  replay_ledger.py  smoke_install.py  verify_stage.py
tests/: conftest.py
tests/adapters/hermes/: test_capabilities.py
tests/adapters/reference/: test_runner.py
tests/conformance/: test_adapters.py  test_enforcement_profiles.py
tests/contract/: test_plugin_contract.py  test_real_hermes_manager.py  test_v1_replay.py  test_workspace_packages.py
tests/core/: test_core_services.py  test_core_surface.py  test_hardening_paths.py
tests/core/gate/: test_buffering.py  test_enforcement.py  test_manifest.py
tests/e2e/: test_evaluations.py
tests/fixtures/compatibility/: diagnostics_only.json  full.json  hook_context.json
tests/fixtures/v1_replay/: approval_bound_gate.jsonl  contradiction_retraction.jsonl  final_output_lint.jsonl  hash_chain.jsonl  manifest.json  ordinary_evidence.jsonl  unknown_tool_block.jsonl
tests/integration/: test_chain_audit.py  test_episode_flow.py  test_essential_scenarios.py  test_hooks_middleware.py  test_normalized_lifecycle.py  test_operator_surfaces.py  test_policy_commands.py  test_semantic_contradiction.py  test_verification.py
tests/properties/: test_ledger_properties.py
tests/unit/: test_architecture.py  test_config.py  test_context_inject.py  test_core_runtime.py  test_dependency_boundaries.py  test_domain_edges.py  test_engine.py  test_events_ids.py  test_gate_defeat_edges.py  test_lint_gate.py  test_policy_cli.py  test_product_claims.py  test_qualifiers_contradiction.py  test_review_regressions.py  test_runtime_boundaries.py  test_secret_redaction.py  test_store.py  test_trust_matrix.py  test_validity.py
