[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "belief-ledger-pramana"
version = "1.0.0rc1"
description = "Episode-scoped typed belief ledger for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "hermes-agent>=0.18.2,<0.19",
  "PyYAML>=6.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hypothesis>=6.100",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=5.0",
  "types-PyYAML>=6.0",
]

[project.entry-points."hermes_agent.plugins"]
belief-ledger-pramana = "belief_ledger_pramana.plugin"

[tool.hatch.build.targets.wheel]
packages = ["belief_ledger_pramana"]
include = ["plugin.yaml", "after-install.md"]

[tool.hatch.build.targets.sdist]
include = [
  "/belief_ledger_pramana",
  "/tests",
  "/evaluations",
  "/scripts",
  "/docs",
  "/plugin.yaml",
  "/__init__.py",
  "/README.md",
  "/CHANGELOG.md",
  "/after-install.md",
  "/config.example.yaml",
  "/HERMES_COMPATIBILITY.md",
  "/RELEASE_NOTES.md",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "contract: Hermes host-contract tests",
  "evaluation: deterministic offline evaluations",
  "live_llm: opt-in tests that may contact a live provider",
]

[tool.coverage.run]
branch = true
source = ["belief_ledger_pramana"]

[tool.coverage.report]
fail_under = 88
precision = 1
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
explicit_package_bases = true
exclude = ["tests", "evaluations"]
